tests/sumo/meso/junction_control/tls_coordination/bad/testsuite.sumo
# deadlock in roundabout
no_control

# problem at traffic light
control

# smooth flow
control.limited

# smooth flow with penalty
control.limited_tlsPenalty

# smooth flow with penalty
control_tlsPenalty

# smooth flow with penalty
control_tlsFlowPenalty

# both penalties applied
control_tlsPenalty_flowPenalty
